@@ -121,7 +121,17 @@ struct api_msg_msg {
     } lb;
 #endif /* TCP_LISTEN_BACKLOG */
   } msg;
+#if LWIP_NETCONN_SEM_PER_THREAD
+  sys_sem_t* op_completed_sem;
+#endif /* LWIP_NETCONN_SEM_PER_THREAD */
 };
+
+#if LWIP_NETCONN_SEM_PER_THREAD
+#define LWIP_API_MSG_SEM(msg)          ((msg)->op_completed_sem)
+#else /* LWIP_NETCONN_SEM_PER_THREAD */
+#define LWIP_API_MSG_SEM(msg)          (&(msg)->conn->op_completed)
+#endif /* LWIP_NETCONN_SEM_PER_THREAD */
+
 
 /** This struct contains a function to execute in another thread context and
     a struct api_msg_msg that serves as an argument for this function.
